<resources>
    <string name="app_name">Fake System Update</string>
    <string name="title_setup">Fake Update</string>
    <string name="subtitle_setup">Prank Setup</string>
    <string name="label_device_info">Your Device</string>
    <string name="label_optimized">Optimized for full screen</string>
    <string name="label_update_style">UPDATE STYLE</string>
    <string name="label_update_duration">UPDATE DURATION</string>
    <string name="label_duration_instant">INSTANT</string>
    <string name="label_duration_eternal">ETERNAL</string>
    <string name="label_keep_screen_on">Keep Awake</string>
    <string name="hint_keep_screen_on">Prevent screen dimming</string>
    <string name="format_minutes">%d minutes</string>
    <string name="format_duration_short" formatted="false">%dm %ds</string>
    <string name="label_exit_method">Secret Exit Method</string>
    <string name="btn_start_prank">START PRANK</string>
    <string name="tip_exit">Tip: To exit the prank, use your configured secret exit method.</string>
    <string name="update_installing">Installing System Update\u2026\nYour device will restart several times.</string>
    <string name="update_do_not_turn_off">Do not turn off your device.</string>
    <string name="update_home_disabled">Home Button Disabled for Update</string>
    <string name="format_percent">%d%%</string>
    <string name="samsung_installing">Installing update\u2026</string>
    <string name="samsung_one_ui_title">One UI 7</string>
    <string name="samsung_system_update_subtitle">Android System Update</string>
    <string name="samsung_do_not_turn_off">Please do not restart your phone or close this window during the installation process.</string>
    <string name="samsung_version_info">Software version: One UI 7.0 / G998BXXU5FVA3</string>
    <string name="samsung_security_patch">SECURITY PATCH LEVEL: JAN 1, 2026</string>
    <string name="pixel_installing">Installing system update\u2026</string>
    <string name="pixel_do_not_turn_off">Do not turn off your device</string>
    <string name="xiaomi_system_update">System Update</string>
    <string name="xiaomi_installing">Updating system\u2026</string>
    <string name="xiaomi_do_not_turn_off">Don\'t turn off your device</string>
    <string name="xiaomi_miui_title">MIUI 16</string>
    <string name="xiaomi_version_info">MIUI 16.0.2.0</string>
    <string name="xiaomi_stable_size">Stable \u2022 3.8 GB</string>
    <string name="xiaomi_whats_new">WHAT\'S NEW</string>
    <string name="xiaomi_downloading">Downloading packages</string>
    <string name="xiaomi_download_size">3.8 GB / 5.2 GB</string>
    <string name="xiaomi_stop">Stop</string>
    <string name="xiaomi_reboot_now">Reboot Now</string>
    <string name="xiaomi_powered_by">POWERED BY ANDROID</string>
    <string name="oneplus_brand">OxygenOS</string>
    <string name="oneplus_installing">Updating system\u2026</string>
    <string name="oneplus_do_not_turn_off">Do not turn off your device</string>
    <string name="oneplus_restart">Your device will restart automatically.</string>
    <string name="oneplus_build_number">IN2023_11_C.16</string>
    <string name="oneplus_play_protect">Protected by Android Play Protect</string>
    <string name="oneplus_version_info">OxygenOS 15.1 | Build IN2025_15.1.0.216</string>
    <string name="huawei_emui_title">EMUI</string>
    <string name="huawei_system_update_subtitle">System Update</string>
    <string name="huawei_updating">Updating\u2026</string>
    <string name="huawei_installing">Optimizing system performance. This may take a while.</string>
    <string name="huawei_do_not_turn_off">Do not restart your phone</string>
    <string name="huawei_version_info">EMUI 14.0.0.162 (C432E8R3P4)</string>
    <string name="stock_recovery_text">ANDROID SYSTEM RECOVERY &lt;3e&gt;</string>
    <string name="stock_build_number">Build 90021.821.1</string>
    <string name="stock_installing">Installing system update\u2026</string>
    <string name="stock_restart_warning">Your device will restart several times.\nDo not turn off your device.</string>
    <string name="label_app_pinning">Screen Pinning</string>
    <string name="hint_app_pinning">Difficult to exit</string>
    <string name="label_schedule_mode">Launch Mode</string>
    <string name="label_mode_now">Now</string>
    <string name="label_mode_delay">Delay</string>
    <string name="label_mode_datetime">Date/Time</string>
    <string name="label_mode_interval">Interval</string>
    <string name="label_delay_after">Start After</string>
    <string name="label_unit_min">Min</string>
    <string name="label_unit_hrs">Hrs</string>
    <string name="label_unit_days">Days</string>
    <string name="format_delay_minutes">%d minutes</string>
    <string name="format_delay_hours">%d hours</string>
    <string name="format_delay_days">%d days</string>
    <string name="label_schedule_start">Schedule Start</string>
    <string name="hint_schedule_start">Delay the update screen</string>
    <string name="btn_pick_date">Pick Date</string>
    <string name="btn_pick_time">Pick Time</string>
    <string name="label_scheduled_for">Scheduled for: %s</string>
    <string name="label_interval_hours">Repeat Every</string>
    <string name="format_hours">%d hours</string>
    <string name="btn_schedule_prank">SCHEDULE PRANK</string>
    <string name="btn_cancel_schedule">CANCEL SCHEDULED</string>
    <string name="toast_prank_scheduled">Prank scheduled!</string>
    <string name="toast_schedule_cancelled">Scheduled prank cancelled.</string>
    <string name="error_past_time">Selected time is in the past.</string>
    <string name="notification_channel_name">Scheduled Prank Trigger</string>
    <string name="complete_update_installed">System update installed successfully.</string>
    <string name="complete_restarting">Restarting\u2026</string>
    <string name="complete_optimizing">Optimizing system\u2026</string>
    <string name="complete_do_not_turn_off">Do not turn off your device.</string>
    <string name="transition_build_info">BUILD 900.2.1</string>
    <string name="transition_keep_alive">KEEP ALIVE</string>
    <string name="title_settings">Settings</string>
    <string name="label_app_information">APP INFORMATION</string>
    <string name="label_current_version">Current Version</string>
    <string name="label_build_number">Build Number</string>
    <string name="label_prank_configuration">PRANK CONFIGURATION</string>
    <string name="label_simulation_speed">Simulation Speed</string>
    <string name="label_speed_realistic">Realistic</string>
    <string name="label_speed_instant">Instant</string>
    <string name="label_fake_errors">Fake Error Messages</string>
    <string name="hint_fake_errors">Show random crashes</string>
    <string name="label_haptic_feedback">Haptic Feedback</string>
    <string name="label_os_style">OS Style</string>
    <string name="label_about_legal">ABOUT &amp; LEGAL</string>
    <string name="label_rate_app">Rate App</string>
    <string name="label_prankos">PrankOS</string>
    <string name="app_disclaimer">Designed for entertainment purposes only. Not affiliated with any OS provider.</string>
    <string name="label_contact_support">Contact Support</string>
    <string name="label_submit_feedback">Submit Feedback</string>
    <string name="feedback_url">https://fakesysupdate.softexforge.io/feedback</string>
    <string name="pranks_community_url">https://fakesysupdate.softexforge.io/pranks</string>
    <string name="btn_view_pranks">View Pranks</string>
    <string name="btn_share_prank">Share Your Prank</string>
    <string name="info_icon_desc">Prank information</string>
    <string name="info_dialog_title">Prank Simulation Active</string>
    <string name="info_dialog_message">This is not real.\n\nNo data is being modified or deleted.\n\nTo exit: %s</string>
    <string name="label_app_info">App Info</string>
    <string name="app_description">A fun prank app that simulates a fake system update on your device. Perfect for harmless pranks on friends and family!</string>
    <string name="label_version">Version %s</string>
    <string name="label_prank_defaults">Prank Defaults</string>
    <string name="label_default_style">Default Update Style</string>
    <string name="label_default_duration">Default Duration</string>
    <string name="label_default_exit">Default Exit Method</string>
    <string name="label_about">About</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_terms">Terms of Service</string>
    <string name="label_back">Back</string>
    <string name="label_last_updated">LAST UPDATED: FEBRUARY 2026</string>
    <string name="label_quick_summary">TL;DR: Quick Summary</string>
    <string name="summary_entertainment">This app is for <b>entertainment only</b>. It is a prank tool.</string>
    <string name="summary_no_modify">We <b>do not delete</b> or modify any actual files on your device.</string>
    <string name="summary_responsible">Use responsibly. We aren\'t liable for broken friendships.</string>
    <string name="btn_accept_continue">Accept &amp; Continue</string>
    <string name="btn_decline">Decline</string>
    <string name="label_agree_terms">I have read and agree to the Terms &amp; Conditions</string>
    <string name="share_diagnostic_header">DIAGNOSTIC DATA OUTPUT //</string>
    <string name="share_wasted_time">WASTED TIME</string>
    <string name="share_active_session">ACTIVE SESSION</string>
    <string name="share_stall_mode">STALL_MODE_V2</string>
    <string name="share_productivity_leak">PRODUCTIVITY LEAK</string>
    <string name="share_cpu_cycles">CPU CYCLES BURNED</string>
    <string name="share_focus_priority">FOCUS PRIORITY</string>
    <string name="share_critical_failure">CRITICAL FAILURE</string>
    <string name="share_fatal_exception">FATAL EXCEPTION</string>
    <string name="share_system_status_critical">SYSTEM STATUS: CRITICAL</string>
    <string name="share_init_prank">> Initiating prank protocol…</string>
    <string name="share_scanning">> Scanning gullibility circuits…</string>
    <string name="share_bypass">> Bypassing logic circuits…\n  Success.</string>
    <string name="share_uploading">> Uploading embarrassment…</string>
    <string name="share_error_laugh">> ERROR: Laugh track not found.</string>
    <string name="share_branding">FAKE_SYS_UPDATE</string>
    <string name="share_data_loss">DATA LOSS CONFIRMED.</string>
    <string name="share_generated_by">GENERATED BY</string>
    <string name="share_copyright">© 2025 FAKE_SYS_UPDATE LABS.</string>
</resources>